deploy/kubernetes/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
  - name: http
    port: 80 
    targetPort: 9696
  selector:
    app: frontend-deployment
