deploy/kubernetes/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-deployment-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - moon.social 
    secretName: moon-social-tls
  rules:
  - host: moon.social 
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend-service
              port:
                number: 80
